--- a/style.css
+++ b/style.css
@@ -1,12 +1,78 @@
 body {
-    background: rgba(214, 200, 213, 0.856);
-}
-.topnav a {
-    float: left;
-    color: #0a7c7c;
+    background: rgba(0, 53, 133, 0.514);
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px;
+}
+div {
+    text-align: center;
+    border-left: 10cm;
+    font-family: 'Lucida Sans';
+    font-size: x-large;
+}
+h1 {
+    font-family:'Lucida Sans';
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    margin: 5px 2px;
+    border-radius: 50%;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+    
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
+  h1 {
+    margin: 0;
+    padding: 0;
+  }
+  h1 {
+    color: rgb(3, 3, 3);
+    font-size: 4rem;
+    text-align: center;
+  }
+  section {
+    height: 100vh;
+  }
+  .tag {
+    opacity: 0;
+    transform: translate(0, 10vh);
+    transition: all 1s;
+  }
+  
+  .tag.visible {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+  
+  .yellow {
+    background-color: lightyellow;
+  }
+  .red {
+    background-color: lightcoral;
+  }
+  .blue {
+    background-color: lightblue;
+  }
+  .green {
+    background-color: lightgreen;
   }
   
